--- a/Api/requirements.txt
+++ b/Api/requirements.txt
@@ -6,6 +6,7 @@ cycler==0.10.0
 Cython==0.27.3
 docopt==0.6.2
 Flask==0.12.2
+Flask-Cors==3.0.3
 Flask-Jsonpify==1.5.0
 Flask-RESTful==0.3.6
 gevent==1.2.2
